# eth-wallet-risk-analysis

./: README.md  main.py  pyproject.toml  start_services.sh
assets_fetch_module/src/: asset_fetcher.py
frontend/: README.md  index.html  tailwind.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AlertCard.tsx  AssetCard.tsx  RiskMeter.tsx  WalletForm.tsx  WalletHeader.tsx
frontend/src/pages/: Dashboard.tsx  Index.tsx  NotFound.tsx
gateway/: main.py
notification_module/: main.py
notification_module/src/: notification_maker.py  processor.py
sapphire_module/: main.py
sapphire_module/config/: api_keys.env
sentiment_analysis/: main.py  pyproject.toml
sentiment_analysis/config/: api_keys.env  system_prompt.txt
sentiment_analysis/data/: assets_input.json  assets_output.json  input.json  output.json  output2.json
sentiment_analysis/files/: restaurants_dataset.json  system_prompt.txt  users_preferences.json
sentiment_analysis/input/: assets_input.json
sentiment_analysis/notebooks/: cryptopanic_fetcher.ipynb  inference.ipynb
sentiment_analysis/output/: cp_output.json  sen_output.json
sentiment_analysis/src/: recommender.ipynb
sentiment_module/: main.py
sentiment_module/config/: system_prompt.txt
sentiment_module/notebooks/: crypto_panic_fetcher.ipynb  inference.ipynb
sentiment_module/src/: crypto_panic_scraper.py  helpers.py  model_inference.py
